force-app/main/default/objects/Discarded_Record__c/Discarded_Record__c.object-meta.xml
<CustomObject>
    <description>This object will be the container for Account, Leads, Contacts, Task and Opportunities that should be discarded from SellScience.</description>
    <label>Discarded Record</label>
    <nameField>
        <displayFormat>Discard-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discarded Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>