force-app/main/default/objects/Discarded_Record__c/fields/Discarded_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Business_Unit__c</fullName>
    <description
  >On the record that was discarded storing the Business Unit value</description>
    <label>Discarded Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>