force-app/main/default/objects/Discarded_Record__c/fields/Discarded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Date_Time__c</fullName>
    <description>Date/Time when record was discarded.</description>
    <label>Discarded Date/Time</label>
    <type>DateTime</type>
</CustomField>