force-app/main/default/objects/Discarded_Record__c/fields/Discarded_Object__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Object__c</fullName>
    <description>Which object the record was discarded from</description>
    <label>Discarded Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>