force-app/main/default/objects/Discarded_Record__c/fields/Discarded_SafeID__c.field-meta.xml
<CustomField>
    <fullName>Discarded_SafeID__c</fullName>
    <description>The discarded record&apos;s safe ID</description>
    <label>Discarded SafeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>