force-app/main/default/objects/Discarded_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bulk_Delete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>